@@ -33,7 +33,7 @@
 					<li>
 						content editor:
 						<a target="_blank" href="http://localhost:8080/cope-runtime-servlet/edited/">frontend</a>,
-						<a target="_blank" href="http://localhost:8080/cope-runtime-servlet/edited/contentEditorLogin.html">editor</a>,
+						<a target="_blank" href="http://localhost:8080/cope-runtime-servlet/edited/copeContentEditor.html">editor</a>,
 						<a target="_blank" href="http://localhost:8080/cope-runtime-servlet/editedConsole">console</a>
 					</li>
 				</ul>
