@@ -129,7 +129,7 @@ public final class EditedServlet extends HttpServlet
 			model.startTransaction("EditedServlet");
 			EditedServlet_Jspm.write(out,
 					response,
-					response.encodeURL("contentEditorLogin.html"),
+					response.encodeURL("copeContentEditor.html"),
 					EditedItem.TYPE.search(null, EditedItem.position, true));
 			model.commit();
 			response.setStatus(HttpServletResponse.SC_OK);
